# uncos

./: .gitignore  .gitmodules  README.md  benchmarking.py  demo.py  groundedsam_wrapper.py  pyproject.toml  requirements.txt  uncos.py  uncos_utils.py
scripts/: benchmarking.py  demo.py
uncos/: __init__.py  config.py  groundedsam_wrapper.py  uncos.py  uncos_utils.py
